# random-scripts

./: .gitignore  .pre-commit-config.yaml
bzstatus/: README.md  backblaze_client.py  bzstatus_gui.py  debug_backblaze.py  requirements.txt
lufsplot/: LOUDNESS.md  Makefile  README.md  file_version_info.txt  lufsplot.py  lufsplot.spec  pyproject.toml  requirements.txt
makebpm/: README.md  makebpm.py
makebpm/anims/: deerbutt.json
makesources/: Makefile  makesources.py  makesources.spec  requirements.txt
powercheck/: Makefile  README.md  powercheck.py  powercheck.spec
simple/: SEprobs.py  anything2flac.py  anything2wav.py  dfl-activate-workspace.py  dfl-change-scene.py  dfl-graph.py  mov2rgb_a.py  pyproject.toml  reaudio.py  remux.py  vfr2cfr.py  vid2frames.py  video_image_combine.py  wt_helper.sh
streamdeck_patch/: README.md  streamdeck_patch.py
